# optift

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.zh_CN.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: main.yaml
eval/: .gitignore  deno.json  generate_input.ts  generate_plots.ts  google_fonts_baseline.inc  google_fonts_baseline.ts  run.ts
include/: cost_model.h  hb_wrap.h  input.h  partitioner.h
overlay-ports/woff2/: portfile.cmake
src/: cost_model.cpp  input.cpp  main.cpp  partitioner.cpp
